fix: adjust grid-column standard-link styles for better alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -336,6 +336,8 @@ h2, p{
 
 .grid-column .standard-link {
     margin-top: auto;
+    width: 100%;
+    justify-content: center;
 }
 
 /* FINE STILE TEMPLATE GRIGLIA*/
